# lazylpsolverlibs-debian

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  lazylpsolverlibs_0.1.42.orig.tar.gz.delta  lazylpsolverlibs_0.1.42.orig.tar.gz.id  lazylpsolverlibs_0.1.43.orig.tar.gz.delta  lazylpsolverlibs_0.1.43.orig.tar.gz.id  lazylpsolverlibs_0.1.44.orig.tar.gz.delta  lazylpsolverlibs_0.1.44.orig.tar.gz.id  lazylpsolverlibs_0.1.50.orig.tar.gz.delta  lazylpsolverlibs_0.1.50.orig.tar.gz.id  lazylpsolverlibs_1.0.0.orig.tar.gz.delta  lazylpsolverlibs_1.0.0.orig.tar.gz.id  lazylpsolverlibs_1.1.0.orig.tar.gz.delta  lazylpsolverlibs_1.1.0.orig.tar.gz.id
debian/: README.Debian  changelog  control  copyright  liblazycplex-bin.install  liblazycplex-dev.install  liblazycplex0-dbg.install  liblazycplex0.install  liblazycplex1.install  liblazyglpk-bin.install  liblazyglpk-dev.install  liblazyglpk0.install  liblazyglpk1.install  liblazygurobi-bin.install  liblazygurobi-dev.install  liblazygurobi0.install  liblazygurobi1.install  liblazylpsolverlibs-dev.install  liblazylpsolverlibs0.install  liblazyxprs-bin.install  liblazyxprs-dev.install  liblazyxprs0.install  liblazyxprs1.install  rules  watch
helpers/: lazycplex-config.c  lazyglpk-config.c  lazygurobi-config.c  lazyxprs-config.c
lazylpsolverlibs/: glpk.h  gurobi_c.h  xprs.h
lazylpsolverlibs/ilcplex/: cplex.h
lib/pkgconfig/: lazycplex.pc.in  lazyglpk.pc.in  lazygurobi.pc.in  lazyxprs.pc.in
share/: filter_header.sh  package_windows.sh  stublib.sh
share/lazylpsolverlibs/: lazylpsolverlibs.nsi  stublib.sh
share/man/: lazycplex_test.1.in  lazyglpk_test.1.in  lazygurobi_test.1.in  lazyxprs_test.1.in
share/man/man1/: lazycplex-config.1.in  lazycplex_test.1.in  lazyglpk-config.1.in  lazyglpk_test.1.in  lazygurobi-config.1.in  lazygurobi_test.1.in  lazyxprs-config.1.in  lazyxprs_test.1.in
src/: lazycplex.c  lazyglpk.c  lazygurobi.c  lazyxprs.c
test/: test_lazycplex.c  test_lazyglpk.c  test_lazygurobi.c  test_lazyxprs.c
